[gd_scene load_steps=2 format=3 uid="uid://e1uv5pskry6n4"]

[ext_resource type="Script" path="res://scripts/demos/leaderboards_demo.gd" id="1_leaderboards"]

[node name="LeaderboardsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_leaderboards")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EpicOS Leaderboards Demo"
horizontal_alignment = 1
add_theme_font_size_override("font_size", 24)

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "‚Üê Back to Menu"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusPanel/StatusContainer"]
layout_mode = 2
text = "Status: Not Logged In (Leaderboards require authentication)"
add_theme_font_size_override("font_size", 16)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
text = "Leaderboard Actions"
add_theme_font_size_override("font_size", 18)

[node name="ActionsGrid" type="GridContainer" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
columns = 3

[node name="QueryDefinitionsButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Definitions"
disabled = true

[node name="QueryRanksButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Query Ranks"
disabled = true

[node name="RefreshButton" type="Button" parent="VBoxContainer/ActionsSection/ActionsGrid"]
layout_mode = 2
text = "Refresh Display"

[node name="RanksQuerySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RanksQueryLabel" type="Label" parent="VBoxContainer/RanksQuerySection"]
layout_mode = 2
text = "Query Specific Leaderboard"
add_theme_font_size_override("font_size", 16)

[node name="RanksQueryContainer" type="HBoxContainer" parent="VBoxContainer/RanksQuerySection"]
layout_mode = 2

[node name="LeaderboardInput" type="LineEdit" parent="VBoxContainer/RanksQuerySection/RanksQueryContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Leaderboard ID"

[node name="LimitInput" type="SpinBox" parent="VBoxContainer/RanksQuerySection/RanksQueryContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 10.0

[node name="QuerySpecificRanksButton" type="Button" parent="VBoxContainer/RanksQuerySection/RanksQueryContainer"]
layout_mode = 2
text = "Query Ranks"
disabled = true

[node name="StatsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="VBoxContainer/StatsSection"]
layout_mode = 2
text = "Submit Statistics"
add_theme_font_size_override("font_size", 16)

[node name="SingleStatContainer" type="HBoxContainer" parent="VBoxContainer/StatsSection"]
layout_mode = 2

[node name="StatNameInput" type="LineEdit" parent="VBoxContainer/StatsSection/SingleStatContainer"]
layout_mode = 2
size_flags_horizontal = 2
placeholder_text = "Stat Name"

[node name="StatValueInput" type="SpinBox" parent="VBoxContainer/StatsSection/SingleStatContainer"]
layout_mode = 2
max_value = 999999.0
value = 100.0

[node name="IngestStatButton" type="Button" parent="VBoxContainer/StatsSection/SingleStatContainer"]
layout_mode = 2
text = "Submit Single Stat"
disabled = true

[node name="MultipleStatsContainer" type="HBoxContainer" parent="VBoxContainer/StatsSection"]
layout_mode = 2

[node name="TestStatsButton" type="Button" parent="VBoxContainer/StatsSection/MultipleStatsContainer"]
layout_mode = 2
text = "Submit Test Stats"
disabled = true

[node name="RandomScoreButton" type="Button" parent="VBoxContainer/StatsSection/MultipleStatsContainer"]
layout_mode = 2
text = "Submit Random Score"
disabled = true

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DataSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DefinitionsPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefinitionsContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/DefinitionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="DefinitionsLabel" type="Label" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer"]
layout_mode = 2
text = "Leaderboard Definitions"
add_theme_font_size_override("font_size", 16)

[node name="DefinitionsScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DefinitionsList" type="ItemList" parent="VBoxContainer/DataSection/DefinitionsPanel/DefinitionsContainer/DefinitionsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RanksPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RanksContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/RanksPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="RanksLabel" type="Label" parent="VBoxContainer/DataSection/RanksPanel/RanksContainer"]
layout_mode = 2
text = "Leaderboard Ranks"
add_theme_font_size_override("font_size", 16)

[node name="RanksScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/RanksPanel/RanksContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RanksList" type="ItemList" parent="VBoxContainer/DataSection/RanksPanel/RanksContainer/RanksScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UserScoresPanel" type="Panel" parent="VBoxContainer/DataSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserScoresContainer" type="VBoxContainer" parent="VBoxContainer/DataSection/UserScoresPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="UserScoresLabel" type="Label" parent="VBoxContainer/DataSection/UserScoresPanel/UserScoresContainer"]
layout_mode = 2
text = "User Scores"
add_theme_font_size_override("font_size", 16)

[node name="UserScoresScrollContainer" type="ScrollContainer" parent="VBoxContainer/DataSection/UserScoresPanel/UserScoresContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserScoresList" type="ItemList" parent="VBoxContainer/DataSection/UserScoresPanel/UserScoresContainer/UserScoresScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OutputSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="OutputLabel" type="Label" parent="VBoxContainer/OutputSection"]
layout_mode = 2
text = "Output Log"
add_theme_font_size_override("font_size", 16)

[node name="OutputScrollContainer" type="ScrollContainer" parent="VBoxContainer/OutputSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="OutputText" type="RichTextLabel" parent="VBoxContainer/OutputSection/OutputScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=green]Welcome to the EpicOS Leaderboards Demo![/color]

This demo shows how to:
1. Query leaderboard definitions from Epic Games
2. Query leaderboard ranks and scores
3. Submit statistics for leaderboards
4. Handle leaderboard-related callbacks

[color=yellow]Note: You must be logged in to use leaderboard features.[/color]
"
scroll_following = true